Fix dropdown offset on safari

--- a/src/components/BrandProductBasicHeader/index.less
+++ b/src/components/BrandProductBasicHeader/index.less
@@ -16,7 +16,7 @@
       margin-right: 12px;
       padding: 1px;
       object-fit: cover;
-      box-shadow: @border-all;
+      border: 0.7 solid #000;
     }
     .productInformation {
       flex: 1;
